# python-3-base

./: Dockerfile  pyproject.toml
