[tool.poetry]
name = "autosummarization"
version = "0.1.2"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pre-commit = "^1.19.0"
importlib-resources = "^1.0"
grpcio = "^1.25.0"
grpcio-tools = "^1.25.0"
streamlit = "^0.50.2"
jieba = "^0.39"
textrank4zh = "^0.3"
bpemb = "^0.3.0"
sklearn = "^0.0"
torch = "^1.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.8"
pytest = "^5.2.2"
black = {version = "^19.3b0", allows-prereleases = true}

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
